# fuzzy-soccer-player

./: .gitignore  CMakeLists.txt  README.md  rules_description.txt
lib/environm/: geom.hpp  sock.cpp
src/: fuzzylib.cpp  fuzzylib.h  main.cpp
src/fuzzy/: FuzzyRule.cpp  FuzzyRule.h  FuzzySystem.cpp  FuzzySystem.h  fuzzy.cpp  fuzzy.h  fuzzy_collection.cpp  fuzzy_collection.h  fuzzy_player.cpp  fuzzy_player.h  fuzzy_rule.cpp  fuzzy_rule.h  fuzzy_set.cpp  fuzzy_set.h  fuzzy_system.cpp  fuzzy_system.h  fuzzyset.cpp  fuzzyset.h
src/logging/: environment_logger.cpp  environment_logger.h
